[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/exit.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Ui" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enable = true

[node name="MaxScoreLabelGameOver" type="Label" parent="Ui"]
visible = false
margin_left = 356.0
margin_top = 522.0
margin_right = 820.0
margin_bottom = 594.0
custom_fonts/font = SubResource( 2 )
text = "Max score: "

[node name="MainLabel" type="Label" parent="Ui"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -278.0
margin_bottom = -59.0
custom_fonts/font = SubResource( 3 )
text = "Asteroid 
Destroyer"
align = 1

[node name="PlayButton" type="Button" parent="Ui"]
margin_left = 400.0
margin_top = 325.0
margin_right = 608.0
margin_bottom = 403.0
custom_fonts/font = SubResource( 1 )
keep_pressed_outside = true
text = "Play"
flat = true
expand_icon = true

[node name="EarseDataButton" type="Button" parent="Ui"]
margin_left = 22.0
margin_top = 545.0
margin_right = 490.0
margin_bottom = 623.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Earse data"
flat = true
expand_icon = true

[node name="CloseButton" type="TextureButton" parent="Ui"]
margin_left = 14.0
margin_top = 13.0
margin_right = 94.0
margin_bottom = 93.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="Ui/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Ui/EarseDataButton" to="." method="_on_EarseDataButton_pressed"]
[connection signal="pressed" from="Ui/CloseButton" to="." method="_on_CloseButton_pressed"]
